# minishell

./: .gitignore  CMakeLists.txt  Makefile  a.out  minishell  minishell_history  test.c
includes/: builtins.h  environment.h  error_handlers.h  exec_commands.h  minishell.h  parsing.h  read_line.h  signal_handlers.h  termcap_commands.h  utils.h
libs/libft/: Makefile  ft_crash.c  ft_malloc.c  ft_realloc.c  ft_split.c  ft_strcmp.c  libft.h
srcs/builtins/: builtins.c  cd.c  cmd_error_message.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c
srcs/environment/: set_environment.c
srcs/error_handlers/: cmd_error_message.c  error_handlers.c  error_messages.c
srcs/exec_commands/: exec_commands.c  find_path.c  make_arrrays.c  redirects.c
srcs/main/: executor.c  history.c  minishell.c
srcs/parsing/: double_quotes.c  handle_special_chars.c  parscing.c  parsing.c  quote_handler.c  read_line.c  special_symbols.c
srcs/read_line/: read_line.c
srcs/signal_handlers/: signal_handlers.c
srcs/termcap_commands/: ctrl_key_manage.c  handle_key_manage.c  handle_key_manage2.c  termcap_commands.c
srcs/utils/: check_history_i.c  doubly_lst_append.c  doubly_lst_clear.c  doubly_lst_delete_element.c  doubly_lst_dup.c  doubly_lst_last.c  doubly_lst_merge_sort.c  doubly_lst_new.c  doubly_lst_size.c  duplicate_string_array.c  fd.c  free_all_exit.c  ft_crash.c  ft_malloc.c  ft_realloc.c  ft_str_replace.c  is_number.c  my_putchar.c  other.c  print_logo.c  special_symbols.c  str_join_char.c  utils.c
